src/pages/Home.css
.home {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
}

.main-content-wrapper {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.main-content {
  color: white;
  position: relative;
  z-index: 1;
  padding: 8rem;

  flex: 1;
}

.hero {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  max-width: 1400px;
  margin: 0 auto;
  padding: 3rem;
  gap: 9rem;

  flex: 1;
}

.hero-image {
  flex: 4 1 400px;
}

.hero-image img {
  width: 100%;
  height: auto;
  border-radius: 0rem;
  object-fit: cover;
}

.hero-content {
  /*flex: 1 1 500px; */

  flex: 1 1 600px;

  display: flex;
  flex-direction: column;
  gap: 0rem;
}

.hero-content h1 {
  font-family: "League Gothic", sans-serif;

  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  font-variation-settings: "wdth" 100;


  font-size: 6.5rem;
  line-height: 0.8;

  margin: 0;
}

.hero-content p {
  color: #ffffffd2;
  font-family: "Roboto", sans-serif;
  font-weight: 400;

  font-size: 1.5rem;
  line-height: 1.3;

  margin-bottom: 2rem;
}

.hero-buttons-grid {
  display: grid;
  gap: 0.8rem;
  grid-template-columns: repeat(20, 1fr);
}

.hero-btn-1 {
  grid-column: span 12;
}

.hero-btn-2 {
  grid-column: span 8;
}

.hero-btn-3 {
  grid-column: span 6;
}

.hero-btn-4 {
  grid-column: span 8;
}

.hero-btn-5 {
  grid-column: span 6;
}


.hero-buttons-grid a {
  padding: 0.75rem 1.5rem;
  font-size: 1rem;

  text-decoration: inherit;
  border-radius: 2rem;

  text-align: center;

  cursor: pointer;
  transition: all 0.7s cubic-bezier(0, 0.8, 0.26, 0.99);
  /*transition: background 0.2s; */

  font-family: "Roboto", sans-serif;
}


.hero-button {
  backdrop-filter: blur(10px);
  /* blur underlying content */
  -webkit-backdrop-filter: blur(10px);
  /* Safari support */
}

.hero-button:active {
  /*transform: scale(0.975);*/
  transform: translateY(2px);
}

.btn-primary,
.btn-primary:visited,
.btn-primary:link,
.btn-primary:hover,
.btn-primary:active {
  background: rgba(255, 255, 255, 0.8);
  border: solid rgba(255, 255, 255, 0.2) 1px;
  opacity: 1;

  color: rgba(0, 0, 0, 0.9);

  font-weight: 500;
}

.btn-primary:hover {
  background: rgba(255, 255, 255, 1);
  border: solid rgba(255, 255, 255, 1) 1px;

  color: rgba(0, 0, 0, 1);
}

.btn-secondary,
.btn-secondary:visited,
.btn-secondary:link,
.btn-secondary:hover,
.btn-secondary:active {
  background: rgba(30, 30, 30, 0.2);
  border: solid rgba(110, 110, 110, 0.1) 1px;
  opacity: 1;

  color: rgba(255, 255, 255, 0.7);

  font-weight: 400;
}

.btn-secondary:hover {
  background: rgba(50, 50, 50, 0.25);
  border: solid rgba(110, 110, 110, 0.15) 1px;
  color: rgba(255, 255, 255, 0.8);
}


footer {
  padding-bottom: 10px;
  margin: auto;

  font-weight: 400;
  text-decoration: none;

  text-align: center;

  padding-left: 60px;
  padding-right: 60px;
}

footer span {
  color: white;
  opacity: 30%;
}


.footer-spacer {
  margin-left: 10px;
  margin-right: 10px;
}

footer a {
  color: white;
  opacity: 30%;

  font-weight: 400;
  text-decoration: none;

  transition: all 0.7s cubic-bezier(0, 0.8, 0.26, 0.99);
}

footer a:link,
footer a:visited,
footer a:hover,
footer a:active {
  color: white;
  opacity: 30%;
}

footer a:hover {
  opacity: 40%;
}



/* Responsive adjustments */


@media (max-width: 1500px) {
  .main-content {
    padding: 6rem;
  }

  .hero-content h1 {
    font-size: 5rem;
    line-height: 0.8;
  }

  .hero-content p {
    font-size: 1.2rem;
    line-height: 1.2;
  }

  .hero {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    max-width: 1000px;
    margin: 0 auto;
    padding: 0rem;
    gap: 4rem;
  }

  .hero-image {
    flex: 4 1 200px;
  }
}

@media (max-width: 1200px) {
  .main-content {
    padding: 6rem;
  }

  .hero {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    max-width: 800px;
    margin: 0 auto;
    padding: 0rem;
    gap: 4rem;
  }

  .hero-image {
    flex: 1 1 200px;
  }

  .hero-content {
    flex: 2 1 400px;
  }
}


@media (max-width: 950px) {
  .main-content {
    padding: 3rem;
  }

  .hero {
    max-width: 400px;
    gap: 2rem;
  }

  .hero-image {
    flex: 4 1 150px;
    max-width: 50%;
    left: 0;
    margin-left: 0px;
    padding-left: 0px;
  }

  .hero-content h1 {
    font-size: 4rem;
    line-height: 0.8;
  }

  .hero-content p {
    font-size: 1rem;
    line-height: 1.3;
  }

  .hero-buttons-grid {
    gap: 0.6rem;
  }

  .hero-buttons-grid .hero-button {
    padding: 0.625rem 1.25rem;
    font-size: 0.9rem;
  }

  .hero-btn-1 {
    grid-column: span 20;
  }

  .hero-btn-2 {
    grid-column: span 12;
  }

  .hero-btn-3 {
    grid-column: span 8;
  }

  .hero-btn-4 {
    grid-column: span 11;
  }

  .hero-btn-5 {
    grid-column: span 9;
  }
}

@media (max-width: 510px) {
  .hero {
    max-width: 400px;
    gap: 1.5rem;
  }

  .hero-image {
    flex: 4 1 100px;
  }

  .hero-content h1 {
    font-size: 3.5rem;
  }

  .hero-content p {
    font-size: 1rem;
    margin-bottom: 1.5rem;
  }

  .hero-buttons-grid .hero-button {
    padding: 0.625rem 1.25rem;
    font-size: 0.8rem;
  }

  footer a, footer span {
    font-size: 14px;
  }

  footer {
    text-align: center
  }
}

@media (max-width: 410px) {
  .hero-content h1 {
    font-size: 2.8rem;
  }

  .hero-content p {
    font-size: 0.85rem;
  }
}


@media (max-width: 350px) {
  .hero-btn-1,
  .hero-btn-2,
  .hero-btn-3,
  .hero-btn-4,
  .hero-btn-5 {
    grid-column: span 20;
  }

  .hero-content h1 {
    font-size: 2.5rem;
  }

  footer {
    padding-left: 20px;
    padding-right: 20px;
  }

}

